kubernetes/modules/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ha-dr-ingress

  annotations:
    kubernetes.io/ingress.class: nginx

    nginx.ingress.kubernetes.io/rewrite-target: /

    nginx.ingress.kubernetes.io/proxy-body-size: "50m"

    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  rules:
    - host: ha-dr.example.com

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: ha-dr-service

                port:
                  number: 80
